--- a/configs/reinforce_default.yaml
+++ b/configs/reinforce_default.yaml
@@ -1,38 +1,23 @@
 ray_local_mode: True
 num_cpus:       4
 num_gpus:       0
-method:         QRL
-ray_logging_path: logs/QRL
+method:         RL
+ray_logging_path: logs/
 ray_num_trial_samples:  1
 type:                   train
 cpus_per_worker:        2
 gpus_per_worker:        0
 
 algorithm_config:
-  env_id:   "CartPole-v0"
+  env_id:   "CartPole-v1"
 
 
   agent:              REINFORCE
-  agent_type:         quantum
   total_timesteps:    10000
   learning_rate:      0.001    # only if model is classical
-  lr_input_scaling:   #0.025
-    - grid_search
-    - float
-    - [0.1,0.05]
-  lr_variational:     0.025
-  lr_output_scaling:  0.1
   num_envs:           1
   gamma:              0.99
   
 
   cuda: False
 
-  classical:    False
-  num_qubits:   4
-  num_layers:   5
-  observables:  local  # local or global
-  ansatz:       hea
-  init_method:  uniform
-  device:       default.qubit
-  diff_method:  adjoint
