--- a/configs/dqn_default.yaml
+++ b/configs/dqn_default.yaml
@@ -1,24 +1,23 @@
 ray_local_mode: False
 num_cpus:       24
 num_gpus:       0
-method:         QRL
-ray_logging_path: logs/QRL
+method:         RL
+ray_logging_path: logs/
 ray_num_trial_samples:  3
 type:                   train
 cpus_per_worker:        3
 gpus_per_worker:        0
 
 algorithm_config:
-  env_id:   "CartPole-v0"
+  env_id:   "CartPole-v1"
 
 
   agent:               DQN
-  agent_type:          classical
-  total_timesteps:    50000
-  learning_rate:      0.001    # only if model is classical
-  lr_input_scaling:   0.001
-  lr_variational:     0.001
-  lr_output_scaling:  0.1
+  total_timesteps:    10000
+  learning_rate:          
+    - grid_search
+    - float
+    - [0.001, 0.0001]
   num_envs:           1
   buffer_size:        10000
   gamma:              0.99
@@ -34,16 +33,3 @@ algorithm_config:
 
   cuda: False
 
-  num_qubits:   10
-  num_layers:   5
-  observables:  local  # local or global
-    # - grid_search
-    # - string
-    # - [local, global]
-  ansatz:       hwe
-  init_method:  uniform
-    # - grid_search
-    # - string
-    # - [uniform, small_random, reduced_domain]
-  alpha:  0.1
-  dynamic_meas: False
