--- a/configs/ppo_default.yaml
+++ b/configs/ppo_default.yaml
@@ -1,8 +1,8 @@
 ray_local_mode: False
 num_cpus:       32
 num_gpus:       0
-method:         QRL
-ray_logging_path: logs/QRL
+method:         RL
+ray_logging_path: logs/
 ray_num_trial_samples:  1
 type:                   train
 cpus_per_worker:        16
@@ -15,9 +15,6 @@ algorithm_config:
   agent:               PPO
   total_timesteps:    1000
   learning_rate:      0.001    # only if model is classical
-  lr_input_scaling:   0.025
-  lr_variational:     0.025
-  lr_output_scaling:  0.1
   num_envs:           1
   num_steps:          128
   anneal_lr:          True
@@ -35,11 +32,5 @@ algorithm_config:
 
   cuda: False
 
-  num_qubits:   4
-  num_layers:   5
-  ansatz:       hwe
-  dynamic_meas: #True
-    - grid_search
-    - string
-    - [True, False]
+
 
