clean up + comments

--- a/configs/reinforce_default.yaml
+++ b/configs/reinforce_default.yaml
@@ -1,23 +1,19 @@
-ray_local_mode: True
-num_cpus:       4
-num_gpus:       0
-method:         RL
-ray_logging_path: logs/
-ray_num_trial_samples:  1
-type:                   train
-cpus_per_worker:        2
-gpus_per_worker:        0
+tune_config:
+  trial_path: logs
+  trial_name: reinforce_cartpole
+  ray_local_mode: True
+  num_cpus:       4
+  num_gpus:       0
+  ray_num_trial_samples:  1
+  cpus_per_worker:        2
+  gpus_per_worker:        0
 
 algorithm_config:
   env_id:   "CartPole-v1"
-
-
   agent:              REINFORCE
-  total_timesteps:    10000
-  learning_rate:      0.001    # only if model is classical
+  total_timesteps:    1000
+  learning_rate:      0.001    #
   num_envs:           1
   gamma:              0.99
-  
-
   cuda: False
 
