--- a/configs/ppo_default.yaml
+++ b/configs/ppo_default.yaml
@@ -1,17 +1,16 @@
-ray_local_mode: False
-num_cpus:       32
-num_gpus:       0
-method:         RL
-ray_logging_path: logs/
-ray_num_trial_samples:  1
-type:                   train
-cpus_per_worker:        16
-gpus_per_worker:        0
+tune_config:  
+  trial_path: logs
+  trial_name:  ppo_cartpole
+  ray_local_mode: False
+  num_cpus:       32
+  num_gpus:       0
+  method:         RL
+  ray_num_trial_samples:  1
+  cpus_per_worker:        16
+  gpus_per_worker:        0
 
 algorithm_config:
   env_id:   "CartPole-v1"
-
-
   agent:               PPO
   total_timesteps:    1000
   learning_rate:      0.001    # only if model is classical
@@ -29,7 +28,6 @@ algorithm_config:
   vf_coef:            0.5
   max_grad_norm:      0.5
   target_kl:          None
-
   cuda: False
 
 
